ckanext/montrose/fanstatic/style.css
/* ... */
.hero-map-wrap{
    border-top: 3px solid rgba(0, 0, 0, .15);
    border-bottom: 3px solid rgba(0, 0, 0, .15);
}

.hero-controls, .leaflet-control-container {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    position: relative
}

.hero-info-select {
    width: 100%;
    left: 0;
    top: 30px
}

@media (min-width: 768px) {
    .hero-info-select {
        width: 300px;
        right: 0;
        left: auto
    }
}

.hero-info {
    position: absolute;
    right: -30px;
    left: auto;
    top: 410px;
    width: 54px;
    z-index: 99;
    border-radius: 6px;
    padding: 2px;
    border: 5px solid #fff;
    background-color: rgba(255, 255, 255, .95)
}

@media screen and (max-width: 991px) {
    .hero-info {
        top: 905px;
        right: -25px;
    }
}

.hero-select {
    margin-top: 15px;
    border-radius: 6px;
    border: 5px solid #B80000
}

.hero-select .form-control {
    color: #B80000;
    height: auto;
    outline: 0;
    border: none;
    font-size: 18px;
    font-weight: 700
}

.hero-country {
    width: 350px;
    left: 0;
    bottom: -100vh
}

@media (max-width: 768px) {
    .hero-country {
        width: 100%
    }

    .main-navigation {
        text-align: center
    }
}

.hero-country-title {
    margin-bottom: 30px;
    color: #B80000;
    border-left: 5px solid #B80000;
    border-right: 5px solid #B80000;
    padding: 10px 16px;
    background-color: rgba(255, 255, 255, .8)
}

#hero_map {
    border: 0;
    width: 100%;
    min-height: 100vh;
    z-index: 1;
}

@media (min-width: 992px) {
    .hero-country {
        bottom: -50vh
    }

    #hero_map {
        min-height: 50vh
    }
}

.leaflet-container {
    font-family: inherit
}

.leaflet-container a.leaflet-popup-close-button {
    padding: 0;
    top: 15px;
    right: 15px
}

.leaflet-popup-content-wrapper {
    border-radius: 0;
    border-top: 5px solid #B80000
}

.leaflet-bar {
    box-shadow: none;
    border-radius: 0;
    border: 5px solid #eee
}

.leaflet-bar a, .leaflet-bar a:hover {
    font-weight: 700;
    display: inline-block;
    width: auto;
    height: auto;
    line-height: normal;
    padding: 10px 20px
}

@media (max-width: 991px) {
    .leaflet-bar a, .leaflet-bar a:hover {
        width: 60px
    }
}

.leaflet-bar a {
    color: #B80000
}

.leaflet-bar a:first-child {
    border-right: 5px solid #eee
}

.leaflet-bar a:first-child, .leaflet-bar a:last-child {
    border-bottom: none;
    border-top-left-radius: 0;
    border-top-right-radius: 0
}

.leaflet-bar a:last-child {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0
}

.leaflet-control-container .leaflet-top.leaflet-left {
    width: 100%;
    text-align: center
}

.leaflet-control-container .leaflet-control-zoom {
    top: 30px;
    left: 0;
    margin-left: 0
}

.leaflet-control-container .leaflet-control-zoom-in, .leaflet-control-container .leaflet-control-zoom-out {
    font-family: inherit;
    font-size: 21px
}

@media (max-width: 767px) {
    .leaflet-control-container .leaflet-control-zoom {
        display: none
    }

    .leaflet-top {
        top: auto
    }

    .leaflet-top .leaflet-control {
        margin-top: 0
    }

    .leaflet-left .leaflet-control {
        margin-left: 0
    }
}

.graphs {
    padding-top: 30px;
    padding-bottom: 30px
}

.graph-container {
    min-height: 20em
}

.graph-flex {
    display: flex;
    justify-content: center;
    align-items: stretch
}

.main-navigation:before, footer:before, main:after {
    content: " ";
    display: block
}

.graph-subtitle {
    font-weight: 400;
    color: #777
}

.graph-value-xl {
    font-size: 72px;
    margin-top: 15px;
    margin-bottom: 30px
}

header {
    background-color: #fff;
    padding-top: 10px;
    padding-bottom: 10px
}

.main-navigation {
    font-size: 18px;
    background-color: #B80000
}

.main-navigation:before {
    width: 100%;
    height: 3px;
    position: absolute;
    background-color: rgba(0, 0, 0, .1)
}

.main-navigation a {
    color: #fff
}

.main-navigation .list-inline {
    margin: 15px
}

.main-navigation .list-inline li {
    padding-left: 15px;
    padding-right: 15px
}

.country-logo {
    position: relative
}

.dashboard-title {
    color: #B80000;
    font-size: 20pt;
    font-weight: 700
}

.language-selector {
    text-align: center;
    float: right;
    margin-top: 30px;
    margin-right: 5px;
}

@media (min-width: 768px) {
    .language-selector {
        text-align: right;
        position: relative;

    }
}

.language-selector a {
    color: inherit
}

.language-selector .active {
    font-weight: 700
}

.language-selector li:hover > .language-flag {
    filter: none
}

.language-selector :not(.active) > .language-flag {
    -webkit-filter: grayscale(100%);
    -moz-filter: grayscale(100%);
    filter: grayscale(100%)
}

.language-name {
    margin-left: 5px
}

.hero-block {
    z-index: 99;
    position: absolute
}

main:after {
    margin-top: 60px;
    width: 100%;
    height: 30px;
    background-color: rgba(0, 0, 0, .15)
}

.data-block-heading {
    margin-bottom: 16px
}

.data-block {
    border-top: 3px solid rgba(0, 0, 0, .2);
    border-bottom: 3px solid rgba(0, 0, 0, .2)
}

.data-set {
    padding: 15px
}

.data-set:not(:last-child) {
    border-bottom: 2px solid rgba(0, 0, 0, .2)
}

.data-set-title {
    margin-top: 0
}

.new-data .data-block-heading {
    margin-left: 15px;
    margin-right: 15px
}

.new-data .data-block {
    border-top: 3px solid #B80000;
    border-bottom: 3px solid #B80000
}

.new-data .data-set-title a {
    color: #B80000
}

.new-data .data-set-title a:hover {
    color: inherit
}

.all-data .data-block:last-child {
    border-bottom: none
}

.all-data .data-block-header {
    padding: 10px 15px;
    background: rgba(184, 0, 0, .2)
}

.all-data .data-block-header .list-inline {
    margin-bottom: 0
}

.all-data .data-block-header + .data-block-header {
    background: rgba(0, 0, 0, .1)
}
/* ... */

